local/manifests/postgresql-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
    name: postgresql-nodeport
    namespace: storage
spec:
    type: NodePort
    ports:
        -   port: 5432
            targetPort: 5432
            nodePort: 30432
    selector:
        app.kubernetes.io/name: postgresql
        app.kubernetes.io/instance: postgresql
