local/manifests/redis-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
    name: redis-nodeport
    namespace: storage
spec:
    type: NodePort
    ports:
        -   port: 6379
            targetPort: 6379
            nodePort: 30379
    selector:
        app.kubernetes.io/name: redis
        app.kubernetes.io/instance: redis
        app.kubernetes.io/component: master
