local/manifests/kafka-ui-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: kafka-ui-ingress
    namespace: messaging
    annotations:
        nginx.ingress.kubernetes.io/rewrite-target: /
        nginx.ingress.kubernetes.io/proxy-body-size: "50m"
spec:
    ingressClassName: nginx
    rules:
        -   host: kafka-ui.local
            http:
                paths:
                    -   path: /
                        pathType: Prefix
                        backend:
                            service:
                                name: kafka-ui
                                port:
                                    number: 8080
