local/manifests/vault-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: vault-ingress
    namespace: vault
    annotations:
        nginx.ingress.kubernetes.io/rewrite-target: /
        nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
        #  nginx.ingress.kubernetes.io/proxy-body-size: "0"
spec:
    ingressClassName: nginx
    rules:
        -   host: vault.local
            http:
                paths:
                    -   path: /
                        pathType: Prefix
                        backend:
                            service:
                                name: vault
                                port:
                                    number: 8200
